# openta-public

./: .gitignore  .gitleaks.toml  Dockerfile  LICENSE  LICENSE_HEADER.txt  Makefile  README.md  alpha-plus-clean_upstream.conf  basic_asyncio.py  docker-compose.yaml  instructions-for-dev-cycle  nginx.conf  rqworker.conf
openta/django/: .dockerignore  .flake8  README_relocate.md  pyproject.toml  requirements-django51.txt  requirements.txt  requirements_dev.txt
openta/django/backend/: .coveragerc  README_db_psql_init.md  README_hooks.md  conftest.py  db_autoreload  db_backup  db_dump_group  db_dump_permissions  db_example.py  db_fix_superuser  db_legacyfix.py  db_load_users  db_loaddata  db_loop  db_mergecourse_from_zip  db_migrate  db_migrate_all  db_purge  db_regrade_and_accept  db_regrade_and_save  db_remove_inactive_databases  db_remove_opentasite  db_rename  db_repair_auth  db_reset  db_restore  db_rsync  db_sync_opentasite_database  db_validate_subdomain  delete_and_add_code.py  do_regrade  do_save_regrade  do_translate  exercise_xml.py  frontend-install  frontend-update  image_utils.py  install_translations  install_vite_frontend  install_xsl  (+25 more)
openta/django/backend/aggregation/: admin.py  apps.py  models.py  serializers.py  views.py
openta/django/backend/backend/: __init__.py  asgi.py  cache_strategy.py  constants.py  forms.py  maintenance.py  serializers.py  settings_dev.py  settings_local.py  settings_manage.py  settings_production.py  settings_static.py  settings_test.py  simulate_slow.py  urls.py  user_utilities.py  version.py  views.py  wsgi.py  xmltools.py
openta/django/backend/course/: admin.py  apps.py  duplicate.py  export_import.py  forms.py  mergecourse.py  models.py  serializers.py  urls.py
openta/django/backend/dbs/: db_clone  db_create_course_from_gz  db_createcourse  db_createcourse_from_zip  db_init  db_mergecourse_from_zip  db_regrade  db_repair  db_sync_exercises  db_trigger
openta/django/backend/exercises/: admin.py  answer_class.py  applymacros.py  apps.py  assets.py  exercise-xsd-backup.html  exercise.xsd  exercise.xsl  exercise_xsd.html  html.xsd  mathpix.py  modelhelpers.py  models.py  parsing.py  paths.py  question.py  question.xsd  serializers.py  time.py  urls.py  util.py  xsd_from_html.py  xsd_from_html_new.py
openta/django/backend/experimental/: openta.py
openta/django/backend/fixtures/: all.json  auth.json  course.json  mini.json  permissions.json  users.json
openta/django/backend/hijack/: __init__.py  apps.py  conf.py  middleware.py  permissions.py  signals.py  urls.py  views.py
openta/django/backend/locale/: translationdict.xml
openta/django/backend/myinvitations/: adapters.py  admin.py  forms.py  urls.py  views.py
openta/django/backend/opentalti/: __init__.py  admin.py  apps.py  config.xml  forms.py  gradebook.py  tests.py  urls.py  views.py
openta/django/backend/opentasites/: admin.py  apps.py  models.py  tests.py  views.py
openta/django/backend/sms/: send_sms.py  views.py
openta/django/backend/templates/: 403.html  activation_failed.html  base.html  base_failed.html  base_main.html  base_streaming.html  change_password.html  course_form_bare_fluid.html  csrf_failure.html  edit_profile.html  edit_translation.html  email_users.html  exercises_reload.html  exercises_test.html  exercises_validate.html  generic_form.html  generic_form_bare.html  generic_form_bare_fluid.html  launch_tool.html  mail_activation  mail_activation.en  mail_activation.sv  maintenance.html  messages.html  otp_validate.html  privacy.html  rate_limit.html  register.html  reload_progress.html  show_qrcode.html  validate_progress.html
openta/django/backend/tests/: abstract_entity_factory.py  course_factory.py  exercise_factory.py  factory.py  group_factory.py  openta_user_factory.py  test_invitations_send_many.py  translation_factory.py  user_factory.py
openta/django/backend/translations/: apps.py  models.py  urls.py  views-deepl-translate.py  views-google-translate.py  views.py
openta/django/backend/twofactor/: utils.py  views.py
openta/django/backend/users/: admin.py  apps.py  forms.py  models.py  views.py
openta/django/backend/workqueue/: admin.py  apps.py  exceptions.py  models.py  urls.py  util.py  views.py
openta/django/backend/xsl/: README  README.md  (+9 more)
(+1574 files in other folders)
